# World42

./: .env  .gitignore  .mcp.json  .npmrc  A faire.md  AGENTS.md  AI_CONTEXT.md  ANALYSIS.md  CLAUDE.md  README.md  index.html  justfile  ocbt-test.html  ocbt-topo-test.html  package-lock.json  package.json  rspack.config.js  todo.txt  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/commands/: large-cbt-paper.md
.claude/memory/: MEMORY.md  atmosphere-integration.md  babylon9-migration.md  bug-spawn-ignored-default-system.md  dev-gpu-hud-bridge.md  dev-server-stale-bundle.md  (+8 more)
.codex/: README.md  config.toml
assets/: meshChunkWorker-DKKHLYFl.js
scripts/: bench_flight.mjs  cbt_perf_capture.mjs  cbt_perf_compare.mjs  cbt_perf_matrix.mjs  gen_terrain_fixture_textures.mjs  gpu_hud_bridge.ps1  grain_probe.mjs  perf_probe.mjs  playwright_cli.mjs  playwright_open_world42.mjs  playwright_world42_smoke.mjs  terrain_perf_capture.mjs  terrain_perf_compare.mjs  terrain_perf_matrix.mjs
server/: Dockerfile  chunkServer.js  docker-compose.yml  package.json
src/: App.ts  Main.ts  SolarSystemLoader.ts  app.ts  index.ts  teleport-to-entity.ts
terrain/: Cargo.toml
terrain/src/: lib.rs
terrain/src/cbt/: cbt_classify.rs  cbt_emit.rs  cbt_kernel.rs  cbt_noise.rs  cbt_scenario_test.rs  cbt_state.rs  mod.rs
terrain/tests/: cbt_noise_fixture.txt  cbt_scenario_fixture.txt
terrain/tools/: gen_noise_fixture.ts
tools/: hyg_to_binary.py
types/: webgpu.d.ts
website/: package-lock.json  package.json  rspress.config.ts  tsconfig.json
(+433 files in other folders)
