[package]
edition = "2024"
name = "terrain_generator"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3"
noise = "0.9"
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
